Improved documentation and comments

--- a/feature_selection_xgboost.ipynb
+++ b/feature_selection_xgboost.ipynb
@@ -44,7 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load dataset csv \n",
     "ds = pd.read_csv('./CW1_train.csv')\n",
+    "\n",
     "# Identify categorical columns\n",
     "categorical_cols = ['cut', 'color', 'clarity']  # Replace with actual categorical column names\n",
     "\n",
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,6 +344,7 @@
     "# n = 1 to 21 \n",
     "for i in range (2, len(outcome_correlations)//2 + 1,1):\n",
     "    X, y = ds.drop(columns='outcome'), ds['outcome']\n",
+    "    \n",
     "    # Clean input data to only contain selected features \n",
     "    X = X[list(outcome_correlations[1:i].index)]\n",
     "\n",
