--- a/model_selection.ipynb
+++ b/model_selection.ipynb
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# One-hot encoded correlation \n",
     "\n",
-    "# Reload dataset \n",
+    "# Load dataset \n",
     "ds = pd.read_csv('./CW1_train.csv')\n",
     "\n",
     "# Identify categorical columns\n",
@@ -58,10 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create splits \n",
     "train, test = train_test_split(ds, test_size=0.2, random_state=123)\n",
     "X_train = train.drop(columns=['outcome'])\n",
     "y_train = train['outcome']\n",
@@ -78,10 +79,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# R2 score \n",
     "def r2_fn(y_test, y_pred):\n",
     "    eps = y_test - y_pred\n",
     "    rss = np.sum(eps ** 2)\n",
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,9 +133,14 @@
    ],
    "source": [
     "model = LinearRegression()\n",
+    "\n",
+    "# Train the model\n",
     "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate \n",
     "y_pred = model.predict(X_test)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test, y_pred))\n",
     "print(root_mean_squared_error(y_pred=y_pred, y_true=y_test))"
    ]
@@ -182,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,9 +204,14 @@
    "source": [
     "# Fit model with transformed normalised data\n",
     "model = LinearRegression()\n",
+    "\n",
+    "# Train the model\n",
     "model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# Evaluate\n",
     "y_pred_scaled = model.predict(X_test_scaled)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test_scaled, y_pred_scaled))\n",
     "print(root_mean_squared_error(y_pred=y_pred_scaled, y_true=y_test_scaled))"
    ]
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -240,12 +252,15 @@
     }
    ],
    "source": [
-    "kr_model = KernelRidge()  # You can adjust alpha and kernel type\n",
+    "kr_model = KernelRidge()  \n",
+    "\n",
+    "# Train the model\n",
     "kr_model.fit(X_train, y_train)\n",
     "\n",
-    "# Step 5: Make predictions\n",
+    "# Evaluate \n",
     "y_pred = kr_model.predict(X_test)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test, y_pred))\n",
     "print(root_mean_squared_error(y_pred=y_pred, y_true=y_test))"
    ]
@@ -259,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -273,9 +288,14 @@
    ],
    "source": [
     "kr_model = KernelRidge()\n",
+    "\n",
+    "# Train the model\n",
     "kr_model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# Evaluate \n",
     "y_pred_scaled = kr_model.predict(X_test_scaled)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test_scaled, y_pred_scaled))\n",
     "print(root_mean_squared_error(y_pred=y_pred_scaled, y_true=y_test_scaled))"
    ]
@@ -300,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,13 +333,15 @@
     }
    ],
    "source": [
-    "rf_model = RandomForestRegressor()  \n",
+    "rf_model = RandomForestRegressor()\n",
+    "\n",
+    "# Train the model\n",
     "rf_model.fit(X_train, y_train)\n",
     "\n",
-    "# Step 5: Make predictions\n",
+    "# Evaluate\n",
     "y_pred = rf_model.predict(X_test)\n",
     "\n",
-    "# Step 6: Evaluate the model\n",
+    "# Scorers \n",
     "print(r2_fn(y_test, y_pred))\n",
     "print(root_mean_squared_error(y_pred=y_pred, y_true=y_test))"
    ]
@@ -347,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -360,12 +382,15 @@
     }
    ],
    "source": [
-    "svr_model = SVR()  # You can tune C, epsilon, and kernel type\n",
+    "svr_model = SVR() \n",
+    "\n",
+    "# Train the model\n",
     "svr_model.fit(X_train, y_train)\n",
     "\n",
-    "# Step 5: Make predictions\n",
+    "# Evaluate \n",
     "y_pred = svr_model.predict(X_test)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test, y_pred))\n",
     "print(root_mean_squared_error(y_pred=y_pred, y_true=y_test))"
    ]
@@ -379,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,9 +426,14 @@
    ],
    "source": [
     "svr_model = SVR() \n",
+    "\n",
+    "# Train the model\n",
     "svr_model.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "# Evaluate\n",
     "y_pred_scaled = svr_model.predict(X_test_scaled)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test_scaled, y_pred_scaled))\n",
     "print(root_mean_squared_error(y_pred=y_pred_scaled, y_true=y_test_scaled))"
    ]
@@ -426,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,9 +474,10 @@
     "# Train the model\n",
     "xgboost_model.fit(X_train, y_train)\n",
     "\n",
-    "# Step 5: Make predictions\n",
+    "# Evaluate \n",
     "y_pred = xgboost_model.predict(X_test)\n",
     "\n",
+    "# Scorers \n",
     "print(r2_fn(y_test, y_pred))\n",
     "print(root_mean_squared_error(y_pred=y_pred, y_true=y_test))"
    ]
