--- a/xgboost_hyperparam_tuning.ipynb
+++ b/xgboost_hyperparam_tuning.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hyperparameter tuning on our selected model, XGBoost using out chosen feature subset. \n",
+    "\n",
+    "Chosen features derived from RFE are: \n",
+    "['depth', 'a1', 'a3', 'a4', 'b1', 'b3', 'b9', 'cut_Ideal', 'color_G', 'color_H']\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -50,12 +60,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tuning max_depth, min_child_weight and n_estimators "
+    "### Tuning Tree-specific Parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -576,19 +586,22 @@
     }
    ],
    "source": [
-    "# Chosen feature subset from \n",
+    "# Chosen feature subset  \n",
     "X = X[['depth', 'a1', 'a3', 'a4', 'b1', 'b3', 'b9', 'cut_Ideal', 'color_G', 'color_H']]\n",
+    "\n",
+    "# Parameters we want to experiment with \n",
     "params = {\n",
     "    'max_depth' : [2, 4, 6, 8],\n",
     "    'min_child_weight' : [1,2,3,4,5],\n",
     "    'n_estimators' : [100, 500, 1000, 1500],\n",
     "}\n",
     "\n",
+    "# Runs iterations of XGB model on every combination of n parameters \n",
     "gsearch = GridSearchCV(estimator = XGBRegressor(random_state=42), \n",
     "param_grid = params, scoring='r2',n_jobs=4, cv=10, return_train_score=True)\n",
     "gsearch.fit(X, y)\n",
     "\n",
-    "\n",
+    "# Log gridsearch information and results \n",
     "print(gsearch.best_params_, gsearch.best_score_, gsearch.scorer_)\n",
     "print(f\"mean test score {(gsearch.cv_results_['mean_test_score'])}\")\n",
     "print(f\"mean train score {(gsearch.cv_results_['mean_train_score'])}\")\n",
@@ -718,12 +731,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tuning gamma, reg_lambda and reg_alpha"
+    "### Tuning regularisation parameters "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1143,18 +1156,19 @@
     }
    ],
    "source": [
-    "# Chosen feature subset from \n",
+    "# Parameters to experiment with\n",
     "params = {\n",
     "    'gamma' : [10, 50, 100, 1000],\n",
     "    'reg_lambda': [100, 200, 300, 400],\n",
     "    'reg_alpha': [100, 200, 300, 400],\n",
     "}\n",
     "\n",
+    "# Runs iterations of XGB on every combination of n parameters \n",
     "gsearch = GridSearchCV(estimator = XGBRegressor(max_depth = 2, min_child_weight = 1, n_estimators = 100, random_state=42), \n",
     "param_grid = params, scoring='r2',n_jobs=4, cv=10, return_train_score=True)\n",
     "gsearch.fit(X, y)\n",
     "\n",
-    "\n",
+    "# Log gridsearch information and results \n",
     "print(gsearch.best_params_, gsearch.best_score_, gsearch.scorer_)\n",
     "print(f\"mean test score {(gsearch.cv_results_['mean_test_score'])}\")\n",
     "print(f\"mean train score {(gsearch.cv_results_['mean_train_score'])}\")\n",
@@ -1201,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1222,17 +1236,32 @@
     }
    ],
    "source": [
-    "XGB_params = {'scale_pos_weight': 1, 'eta': 0.31,'gamma': 40.006000, 'max_depth': 2, 'n_estimators': 1000, 'reg_lambda': 100, 'reg_alpha': 637, 'subsample':0.8, 'colsample_bynode':0.8, 'colsample_bylevel': 0.9, 'colsample_bytree' : 0.9, 'random_state':42}\n",
-    "model = XGBRegressor(**XGB_params)\n",
+    "# Final hyper-tuned parameters \n",
+    "XGB_params = {'scale_pos_weight': 1, \n",
+    "              'eta': 0.31,\n",
+    "              'gamma': 40.006000, \n",
+    "              'max_depth': 2, \n",
+    "              'n_estimators': 1000, \n",
+    "              'reg_lambda': 100, \n",
+    "              'reg_alpha': 637, \n",
+    "              'subsample':0.8, \n",
+    "              'colsample_bynode':0.8, \n",
+    "              'colsample_bylevel': 0.9, \n",
+    "              'colsample_bytree' : 0.9, \n",
+    "              'random_state':42}\n",
     "\n",
+    "# Initialise Models \n",
+    "model = XGBRegressor(**XGB_params)\n",
     "xgb_bagging = BaggingRegressor(estimator=model, random_state=42)\n",
     "\n",
     "bagging_param = {'n_estimators': [16]}\n",
     "\n",
+    "# Train model \n",
     "bagging_gsearch = GridSearchCV(estimator = xgb_bagging, \n",
     "param_grid = bagging_param, scoring='r2',n_jobs=4, cv=10, return_train_score=True)\n",
     "bagging_gsearch.fit(X, y)\n",
     "\n",
+    "# Log information and results \n",
     "print(bagging_gsearch.best_params_, bagging_gsearch.best_score_, bagging_gsearch.scorer_)\n",
     "print(f\"mean test score {(bagging_gsearch.cv_results_['mean_test_score'])}\")\n",
     "print(f\"mean train score {(bagging_gsearch.cv_results_['mean_train_score'])}\")\n",
@@ -1250,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1265,17 +1294,25 @@
     }
    ],
    "source": [
-    "# Visualize the performance comparison \n",
+    "# Visualise the performance comparison between singular XGBoost and XGBoost bagging \n",
     "\n",
     "val_R2_score = [gsearch.best_score_, (bagging_gsearch.cv_results_['mean_test_score'][0])]\n",
     "\n",
     "models = ['Single XGBoost', 'Bagging XGBoost']\n",
     "\n",
-    "\n",
+    "# Plot bar chart of validation R2 Scores \n",
     "plt.bar(models, val_R2_score)\n",
     "plt.title('Validation R2 Comparison')\n",
     "plt.ylim(0.4, 0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bagging-XGBoost allowed validation R2 to in-\n",
+    "crease from 0.4737843 to 0.47902414."
    ]
   }
  ],
